[package]
name = "py_geo_interface"
description = "Exchange vector geometries between Rust and Python using pyo3 and Pythons `__geo_interface__` protocol."
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/nmandery/py_geo_interface"
homepage = "https://github.com/nmandery/py_geo_interface"
authors = [
    "Nico Mandery <nico@nmandery.net>"
]
categories = [
    "geo",
    "geospatial",
    "geography",
    "pyo3",
    "python"
]

[dependencies]
pyo3 = "0.16"
geo-types = "0.7"
