[package]
name = "py_geo_interface"
description = "Exchange vector geometries between Rust and Python using pyo3 and Pythons __geo_interface__ protocol."
version = "0.6.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/nmandery/py_geo_interface"
homepage = "https://github.com/nmandery/py_geo_interface"
authors = [
    "Nico Mandery <nico@nmandery.net>"
]
keywords = [
    "geo",
    "geospatial",
    "geography",
    "pyo3",
    "python"
]

[features]
default = ["f64"]
f64 = []
f32 = []
i8 = []
i16 = []
i32 = []
i64 = []
u8 = []
u16 = []
u32 = []
u64 = []
wkb = ["dep:geozero"]

# to be used when running the unittests of this crate
test = ["pyo3/auto-initialize"]

[dependencies]
geo-types = "0.7"
num-traits = "0.2"

[dependencies.pyo3]
version = "0.19"
features = [
    #"abi3"
]

[dependencies.geozero]
version = "0.10"
default-features = false
features = ["with-geo", "with-wkb"]
optional = true

